--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   font-size:14px;
   height: 175vh;
 h1 {
-  color: SlateGray;
+  color: white;
   font-size: 36px;
   text-align: center;
 }
