changed color to white

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-image: url(images/fallingcoins.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  color: DimGray;
+  color: white;
   font-family: 'Open Sans';
   font-size:14px;
   height: 175vh;
